<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="40dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:weightSum="1"
    android:background="#000000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="70dp"
        android:textColor="#FFFFFF"
        android:fontFamily="serif"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/welcomeMessage"
        android:textColor="#d9d6d6"
        android:fontFamily="sans-serif"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="95dp" />

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/arrow"
        android:layout_below="@id/textView"
        android:layout_alignRight="@id/textView" />


    <com.facebook.login.widget.LoginButton
        android:id="@+id/fb_login_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="61dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/mapViewBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/navigateMap"
        android:textSize="16dp"
        android:background="#002b81"
        android:textColor="#FFFFFF"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/fb_login_button"
        android:layout_centerHorizontal="true"
        android:visibility="invisible">

    </Button>

</RelativeLayout>

